Get rid of the CSS3 ":target::before" trick to prevent the navbar from obscuring the content for hash URL jumps, and instead use a JS handler to manually scroll when the hash changes. Not pretty, but it's less glitchy and smoother

--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -2,14 +2,6 @@ body {
 	padding: 50px;
 }
 
-:target::before { 
-	display: block; 
-	content: " "; 
-	margin-top: -45px; 
-	height: 45px; 
-	visibility: hidden; 
-}
-
 .span2 {
 	font-size: 12px;
 }
